# Space_Time

./: .gitignore  README.md  app.py  config.py  pyproject.toml
.streamlit/: config.toml
CLOCK/: Spacecraft_Timekeeping_Complete_Formatted_Execution_Plan.docx  Spacecraft_Timekeeping_Final_Unified_Execution_Plan.docx  Spacecraft_Timekeeping_Functional_Flow_Report_Final_Clean.docx  Spacecraft_Timekeeping_Unified_Execution_Plan_RC_Car_POC.docx  Spacecraft_Timing_Questions.xlsx  Time.pptx  spacecraft_timekeeping_literature_survey.docx  spacecraft_timing_python_guide.docx
CLOCK/Literature_Survey/: download_manifest.csv
GNSS_DATA/: DATA_SOURCES.md
analysis/: allan_deviation.py  clock_truth.py  gnss_analysis.py
data/: algo_receiver_clock_truth_2025100.csv  gnss_manifest.csv
models/: clock_model.py  gnss_time_model.py  kalman_filter.py
receivers/: __init__.py  base_receiver.py  simulated_receiver.py
scratch/: project_explanation.md
tests/: test_allan_deviation.py  test_clock_model.py  test_gnss_model.py  test_kalman_filter.py  test_phase_b.py
